[#2266] Fix potential overflow scrolling on the level name

--- a/Dashboard/app/css/main.scss
+++ b/Dashboard/app/css/main.scss
@@ -5619,11 +5619,13 @@ nav.cascadeBreadCrumb {
 
         .levelHead {
             padding-left: 5px;
-            width: calc(100% - 10px);
+            max-width: calc(100% - 10px);
             padding-bottom: 15px;
 
+            @include noWrapTxt;
+
             label {
-                max-width: 80%;
+                max-width: 60%;
                 display: inline-block !important;
 
                 @include noWrapTxt;
